--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -12,4 +12,6 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "$(cat hello_world.txt)" <<EOT
              "TEST"
-             EOT
+             mkdir dirtest
+             cd dirtest
+             touch aaa.txt
