--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: check out repository code
         uses: actions/checkout@v4
-      - run: echo "$(cat hello_world.txt)" <<EOT
+      - run: echo "$(cat hello_world.txt)"
              "TEST"
              mkdir dirtest
              cd dirtest
