--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/checkout@v4
       - run: |
           echo "$(cat hello_world.txt)"
-          "TEST"
           mkdir dirtest
           cd dirtest
           touch aaa.txt
           cd ..
           ll
+          tree
