Test github action

--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -16,7 +16,7 @@ jobs:
           cd dirtest
           touch aaa.txt
           cd ..
-          tree
+          #tree
           shopt -s expand_aliases
           alias ll="ls"
           ll
